--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@tovarishfin/hardhat-yul",
-  "version": "3.0.4",
-  "description": "Hardhat plugin to develop smart contracts in Yul",
+  "name": "@skybit/hardhat-yul",
+  "version": "4.0.1",
+  "description": "Compile Yul smart contracts in Hardhat",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tovarishfin/hardhat-yul.git"
+    "url": "git+https://github.com/SKYBITDev3/hardhat-yul.git"
   },
-  "homepage": "https://github.com/TovarishFin/hardhat-yul",
-  "author": "TovarishFin",
+  "homepage": "https://github.com/SKYBITDev3/hardhat-yul",
+  "author": "SKYBIT",
   "license": "MIT",
   "main": "dist/index.js",
   "keywords": [
@@ -33,37 +33,37 @@
     "README.md"
   ],
   "dependencies": {
-    "@nomiclabs/hardhat-docker": "^2.0.0",
-    "fs-extra": "^10.1.0",
     "glob": "^8.0.3",
-    "solc": "^0.8.17",
-    "solpp": "^0.11.5",
-    "yulp": "^0.2.3"
+    "solc": "^0.8.21",
+    "yulp": "^0.2.3",
+    "typescript": "~4.8.4",
+    "@types/glob": "^8.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.0",
-    "@types/fs-extra": "^9.0.13",
-    "@types/glob": "^8.0.0",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^18.8.2",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "chai": "^4.2.0",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "hardhat": "^2.0.0",
-    "mocha": "^10.0.0",
-    "prettier": "2.7.1",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.8.4"
+    "@nomiclabs/hardhat-docker": "^2.0.2",
+    "@types/chai": "^4.3.6",
+    "@types/fs-extra": "^11.0.2",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "chai": "^4.3.8",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "fs-extra": "^11.1.1",
+    "hardhat": "^2.17.3",
+    "mocha": "^10.2.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.1",
+    "solpp": "^0.11.5",
+    "ts-node": "^10.9.1"
   },
   "peerDependencies": {
-    "hardhat": "^2.0.0"
+    "hardhat": "^2.17.3"
   },
   "bugs": {
-    "url": "https://github.com/tovarishfin/hardhat-yul/issues"
+    "url": "https://github.com/SKYBITDev3/hardhat-yul/issues"
   }
 }
