--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skybit/hardhat-yul",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "Compile Yul smart contracts in Hardhat",
   "repository": {
     "type": "git",
@@ -33,18 +33,18 @@
     "README.md"
   ],
   "dependencies": {
-    "glob": "^8.0.3",
+    "@types/glob": "^8.0.0",
+    "glob": "^10.3.4",
     "solc": "^0.8.21",
-    "yulp": "^0.2.3",
-    "typescript": "~4.8.4",
-    "@types/glob": "^8.0.0"
+    "typescript": "~5.2.2",
+    "yulp": "^0.2.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-docker": "^2.0.2",
     "@types/chai": "^4.3.6",
     "@types/fs-extra": "^11.0.2",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^20.6.0",
+    "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "chai": "^4.3.8",
