--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skybit/hardhat-yul",
-  "version": "4.0.3",
+  "version": "4.1.0",
   "description": "Compile Yul smart contracts in Hardhat",
   "repository": {
     "type": "git",
@@ -33,37 +33,35 @@
     "README.md"
   ],
   "dependencies": {
-    "@types/glob": "^8.0.0",
-    "glob": "^10.3.4",
-    "solc": "^0.8.21",
-    "typescript": "~5.2.2",
+    "@types/glob": "^8.1.0",
+    "glob": "^10.3.10",
+    "solc": "^0.8.24",
+    "typescript": "~5.3.3",
     "yulp": "^0.2.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-docker": "^2.0.2",
-    "@types/chai": "^4.3.6",
-    "@types/fs-extra": "^11.0.2",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.6.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "chai": "^4.3.8",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "fs-extra": "^11.1.1",
-    "hardhat": "^2.17.3",
-    "mocha": "^10.2.0",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.1",
+    "@types/chai": "^4.3.12",
+    "@types/fs-extra": "^11.0.4",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.24",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "chai": "^5.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "fs-extra": "^11.2.0",
+    "hardhat": "2.18.3",
+    "mocha": "^10.3.0",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
     "solpp": "^0.11.5",
-    "ts-node": "^10.9.1"
-  },
-  "peerDependencies": {
-    "hardhat": "^2.17.3"
+    "ts-node": "^10.9.2"
   },
   "bugs": {
     "url": "https://github.com/SKYBITDev3/hardhat-yul/issues"
-  }
+  },
+  "packageManager": "yarn@4.1.1"
 }
