--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@skybit/hardhat-yul",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Compile Yul smart contracts in Hardhat",
   "repository": {
     "type": "git",
@@ -35,25 +35,24 @@
   "dependencies": {
     "@types/glob": "^8.1.0",
     "glob": "^10.3.10",
-    "solc": "^0.8.24",
-    "typescript": "~5.3.3",
+    "typescript": "~5.4.3",
     "yulp": "^0.2.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-docker": "^2.0.2",
-    "@types/chai": "^4.3.12",
+    "@types/chai": "^4.3.14",
     "@types/fs-extra": "^11.0.4",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.24",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "chai": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "fs-extra": "^11.2.0",
-    "hardhat": "2.18.3",
+    "hardhat": "2.22.2",
     "mocha": "^10.3.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
@@ -63,5 +62,8 @@
   "bugs": {
     "url": "https://github.com/SKYBITDev3/hardhat-yul/issues"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "peerDependencies": {
+    "solc": "*"
+  }
 }
